# lotro-launcher

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
resources/: dark_theme.qss  resources.qrc
resources/data/: deeds.json  items.json  recipes.json
resources/lore/: allegiances.xml  classes.xml  collections.xml  cosmetics.xml  crafting.xml  emotes.xml  factions.xml  housing.xml  races.xml  sets.xml  stats.xml  titles.xml  traitTrees.xml  traits.xml  virtues.xml
src/: main.cpp
src/addons/: AddonManager.cpp  AddonManager.hpp  CompendiumParser.cpp  CompendiumParser.hpp
src/companion/: CharacterExtractor.cpp  CharacterExtractor.hpp  CharacterTracker.cpp  CharacterTracker.hpp  GameDatabase.cpp  GameDatabase.hpp  ItemDatabase.cpp  ItemDatabase.hpp  LiveSyncService.cpp  LiveSyncService.hpp  LotroMemoryConfig.hpp  PatternScanner.cpp  PatternScanner.hpp  ProcessMemory.cpp  ProcessMemory.hpp  StatCalculator.cpp  StatCalculator.hpp
src/companion/export/: DataExporter.cpp  DataExporter.hpp
src/core/: JournalEntry.hpp  JournalManager.cpp  JournalManager.hpp
src/core/config/: AccountConfig.cpp  AccountConfig.hpp  ConfigManager.cpp  ConfigManager.hpp  GameConfig.cpp  GameConfig.hpp  WineConfig.cpp  WineConfig.hpp
src/core/credentials/: CredentialStore.cpp  CredentialStore.hpp  LibSecretStore.cpp  WindowsCredentialStore.cpp
src/core/platform/: LinuxPlatform.cpp  Platform.cpp  Platform.hpp  WindowsPlatform.cpp
src/dat/: BufferUtils.cpp  BufferUtils.hpp  DatArchive.cpp  DatArchive.hpp  DataFacade.cpp  DataFacade.hpp  DirectoryEntry.hpp  FileEntry.hpp  PropertiesRegistry.hpp  PropertyDefinition.hpp  PropertyDefinitionsLoader.cpp  PropertyDefinitionsLoader.hpp  PropertyType.hpp
src/game/: DatFile.cpp  DatFile.hpp  GameLauncher.cpp  GameLauncher.hpp  LaunchArguments.cpp  LaunchArguments.hpp  NativePatcher.cpp  NativePatcher.hpp  PatchClient.cpp  PatchClient.hpp  PatchServerClient.cpp  PatchServerClient.hpp  UserPreferences.cpp  UserPreferences.hpp
src/network/: GameServicesInfo.cpp  GameServicesInfo.hpp  LoginAccount.cpp  LoginAccount.hpp  LotroInterfaceClient.cpp  LotroInterfaceClient.hpp  NewsfeedParser.cpp  NewsfeedParser.hpp  SoapClient.cpp  SoapClient.hpp  WorldList.cpp  WorldList.hpp
src/steam/: SteamIntegration.cpp  SteamIntegration.hpp
src/ui/: AddonManagerWindow.cpp  AddonManagerWindow.hpp  CharacterDetailWidget.cpp  CharacterDetailWidget.hpp  CharacterListWidget.cpp  CharacterListWidget.hpp  CharacterTrackerWindow.cpp  CharacterTrackerWindow.hpp  CompanionWindow.cpp  CompanionWindow.hpp  DataExportWindow.cpp  DataExportWindow.hpp  DeedBrowserWidget.cpp  DeedBrowserWidget.hpp  GearSimulatorWidget.cpp  GearSimulatorWidget.hpp  JournalWindow.cpp  JournalWindow.hpp  LoadingSpinner.hpp  LoginWidget.cpp  LoginWidget.hpp  MainWindow.cpp  MainWindow.hpp  PatchDialog.cpp  PatchDialog.hpp  RecipeBrowserWidget.cpp  RecipeBrowserWidget.hpp  SettingsWindow.cpp  SettingsWindow.hpp  SetupWizard.cpp  SetupWizard.hpp  StatusIndicator.hpp  SyncStatusWidget.cpp  SyncStatusWidget.hpp
src/wine/: WineManager.cpp  WineManager.hpp  WinePrefixSetup.cpp  WinePrefixSetup.hpp  WineProcessBuilder.cpp  WineProcessBuilder.hpp
tests/: CMakeLists.txt  test_compendium_parser.cpp  test_config.cpp  test_launch_arguments.cpp  test_main.cpp
tools/: analyze_crypto.py  capture_iptables.sh  capture_patch_traffic.sh  capture_with_tcpdump.sh  patch_protocol_probe.py  patch_proxy.py  protocol_analysis.py  run_patch_client.c  run_with_capture.sh  run_with_strace.sh  socket_hook.c  test_datfile.cpp
